[tool.poetry]
name = "powerball-backend"
version = "0.1.0"
description = ""
authors = ["Michael Dorman <michaelw.kcs@gmail.com>"]
readme = "README.md"
#packages = [{include = "powerball_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
invoke = "^2.2.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
